Added #camera-stream-pipeline module allowing to convert an RTSP stream to webrtc.
Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

webrtc feedback

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

wip

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

wip2

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

wip2

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

wip3

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

wip3

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

wip4

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

wip5

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

wip6

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

wip9

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

wip10

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

wip24

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

ca marchotte

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

--- a/kontroller-services-api-implem/build.gradle
+++ b/kontroller-services-api-implem/build.gradle
@@ -28,6 +28,7 @@ android {
 dependencies {
     api project(path: ':kontroller-services-api')
     api project(path: ':panel-connection-manager')
+    api project(path: ':camera-stream-pipeline')
     implementation 'androidx.room:room-runtime:2.1.0'
     annotationProcessor 'androidx.room:room-compiler:2.1.0'
     implementation 'org.webrtc:google-webrtc:1.0.32006'
