--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,4 @@ include ':app'
 include ':kontroller-services-api'
 include ':panel-connection-manager'
 include ':kontroller-services-api-implem'
+include ':camera-stream-pipeline'
