Added #visca-over-ip modulie allowing tp controll PTZ cameras using VISCA commands over a local network.
Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

wip

Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,4 @@ include ':kontroller-services-api'
 include ':panel-connection-manager'
 include ':kontroller-services-api-implem'
 include ':camera-stream-pipeline'
+include ':visca-over-ip'
