--- a/kontroller-services-api-implem/build.gradle
+++ b/kontroller-services-api-implem/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     api project(path: ':kontroller-services-api')
     api project(path: ':panel-connection-manager')
     api project(path: ':camera-stream-pipeline')
+    api project(path: ':visca-over-ip')
     implementation 'androidx.room:room-runtime:2.1.0'
     annotationProcessor 'androidx.room:room-compiler:2.1.0'
     implementation 'org.webrtc:google-webrtc:1.0.32006'
