Added livepublisherbin allowing to output an RTMP stream.
Signed-off-by: wassim BEN FATMA <wassim.benfatma@kalyzee.com>

--- a/camera-stream-pipeline/build.gradle
+++ b/camera-stream-pipeline/build.gradle
@@ -67,5 +67,6 @@ afterEvaluate {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':kontroller-services-api')
     testImplementation 'junit:junit:4.12'
 }
