--- a/panel-connection-manager/build.gradle
+++ b/panel-connection-manager/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 23
-        targetSdk 32
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -34,7 +34,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.11.1'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.1'
     implementation 'org.apache.commons:commons-lang3:3.6'
-    api 'androidx.security:security-crypto:1.0.0-rc02'
+    implementation 'androidx.security:security-crypto:1.1.0-alpha03'
     testImplementation 'junit:junit:4.+'
     testImplementation 'org.mockito:mockito-core:1.10.19'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
